# CChat

./: .gitignore  CMakeLists.txt  Makefile  README.md  messages  users
include/: Chat.h  Message.h  User.h  sha256.h
src/: Chat.cpp  User.cpp  main.cpp  sha256.cpp
